# ML-Projects

./: .env.example  .gitignore  CODE_DOCUMENTATION.md  FILE_STRUCTURE.md  GETTING_STARTED.md  PROJECT_COMPLETE.md  PROJECT_FLOW.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  full_pipeline_decision_tree.py  full_pipeline_gradient_boosting.py  full_pipeline_linear_regression.py  full_pipeline_logistic_regression.py  full_pipeline_random_forest.py  pyproject.toml  run_decision_tree.py  run_gradient_boosting.py  run_linear_regression.py  run_logistic_regression.py  run_random_forest.py
COMMENTED_CODE/: COMPLETION_SUMMARY.md
COMMENTED_CODE/application/: README.md  data_ingestion.md
COMMENTED_CODE/domain/: entities.md
COMMENTED_CODE/src/domain/: entities.md
COMMENTED_CODE_update/: INDEX.md  README.md  SUMMARY.md
COMMENTED_CODE_update/src/domain/: repositories.md  value_objects.md
commented_code/: DOCUMENTATION_INDEX.md  README.md
commented_code/application/: eda.md  ml_pipeline.md  model_training.md
commented_code/domain/: repositories.md  value_objects.md
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: ARCHITECTURE.md  USAGE.md
examples/: example_csv_pipeline.py  example_eda.py  example_ocr_processing.py  example_pdf_processing.py
models/: .gitkeep
outputs/: .gitkeep
scripts/: generate_sample_data.py  setup.py
src/: __init__.py
src/application/use_cases/: __init__.py  data_ingestion.py  eda.py  ml_pipeline.py  model_training.py  (+1 more)
src/domain/: entities.py  repositories.py  value_objects.py
src/presentation/: __init__.py  cli.py
(+26 files in other folders)
